--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -7,7 +7,7 @@
           </a>
           <a href="https://www.facebook.com/kardRacing" style="color:black" class="font">
                <img src="./assets/images/icons8-facebook-500.png" width="40px">
-               ©Pissanu Kumngok סּ͡͡_סּ͡
+               ©Pitsanu Khamngok סּ͡͡_סּ͡
           </a>
           
           
