--- a/src/app/heatmap/heatmap.component.html
+++ b/src/app/heatmap/heatmap.component.html
@@ -36,6 +36,12 @@
     <input type="radio" name="type" (click)="toggleHeatmap()"/>
     <label for="changemode-driving">hide</label> 
   </div>
+
+  <div id="DataCollDemo" class="controls mode-selector">
+    <input type="radio" name="type" (click)="DataCollDemo()"/>
+    <label for="changemode-walking">Demo</label> &nbsp;
+  
+  </div>
   
   <!-- <agm-marker 
     [latitude]="this.latCenter"
