--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -293,14 +293,15 @@
 
           
      </div>
-     <div class="p-fluid p-grid p-formgrid">
+
+     <!-- <div class="p-fluid p-grid p-formgrid">
           <div class="p-field p-col-12 p-md-4">
                <label for="basic">Basic</label>
                <p-calendar [(ngModel)]="date1" [showIcon]="true" inputId="icon"></p-calendar>
           </div>
      </div>
      <button (click)=bt()>OK</button>
-     <h1>{{date1}}</h1>
+     <h1>{{date1}}</h1> -->
      
      <app-footer></app-footer>
 
