--- a/src/app/heatmap/heatmap.component.html
+++ b/src/app/heatmap/heatmap.component.html
@@ -37,6 +37,23 @@
     <label for="changemode-driving">hide</label> 
   </div>
 
+  
+  <div id="showlabel1">
+    <label  class="font controls " style="background-color: rgb(0, 255, 13);">สัญญาณอ่อน</label> &nbsp;
+    <label  class="font controls " style="background-color: rgb(255, 208, 0);">สัญญาณปานกลาง</label> &nbsp;
+    <label  class="font controls " style="background-color: rgb(255, 0, 0);">สัญญาณแรง</label> &nbsp;
+  </div>
+
+
+  <div id="DetailSF" class="controls">
+    <label style="background-color: rgba(73, 109, 226, 0.747);">
+      <h5 align="center" class="font" style="color: rgb(255, 255, 255);">คำอธิบาย SF</h5>
+      <p id="example4" class="font1">
+        Spreading Factor(SF)จะมีผลในเรื่องอัตราข้อมูลซึ่งเป็นการกำหนดความเร็วในการรับส่งถ้าเพิ่มอัตราข้อมูล(โดยการทำแบนด์วิดธ์ให้กว้างขึ้นหรือให้ค่า(SF)ที่ต่ำลง)จะทำการรับส่งข้อมูลได้ในเวลาที่สั้นลงได้</p>
+    </label> &nbsp;
+  </div>
+  
+  
   <div id="DataCollDemo" class="controls mode-selector">
     <input type="radio" name="type" (click)="DataCollDemo()"/>
     <label for="changemode-walking">Demo</label> &nbsp;
